<resources>
    <string name="app_name">cmpt-276-project</string>
    <string name="textview">
        Display Format:\n
        Restaurant Name\n
        Hazard Level, # issues, most recent inspection date
    </string>
    <string name="restaurant_menu">Select to see restaurant details</string>
    <string name="inspection_type">Inspection Type:</string>
    <string name="critical_issues"># Critical Issues:</string>
    <string name="hazard_rating">Hazard Rating</string>
    <string name="non_critical_issues"># Non Critical Issues:</string>
    <string name="inspection_date">Inspection Date:</string>
    <string name="title_activity_single_restaurant">SingleRestaurantActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="run_mode">Run Mode</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="restaurant_name">Restaurant</string>
    <string name="restaurant_address">Address</string>
    <string name="restaurant_coordinates">Coordinates</string>
    <string name="restaurant">Restaurant</string>
    <string name="hazard_icon">hazard icon</string>
    <string name="hazardicon">hazardicon</string>
    <string name="numCritIssuesText"># of crit issues:</string>
    <string name="numCritIssueVal">0</string>
    <string name="numNonCritText"># of non-critical issues:</string>
    <string name="numNonCritVal">0</string>
    <string name="time_since_last_visit">Time since inspection:</string>
    <string name="inspectionDateVal">30 days</string>
    <string name="title_activity_single_inspection">SingleInspectionActivity</string>
    <string name="no_violation">No violation</string>
    <string name="inspections">Inspections:</string>
    <string name="inspect_date">inspect date</string>
    <string name="issues"># issues</string>
    <string name="txtname">txtName</string>
    <string name="h_level">h_level</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">Map</string>
    <string name="more_info">More Info</string>

    <string name = "Hold_on">Hold on, we are loading the data</string>
    <string name="Yes">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="Done">Done</string>
    <string name="done_download">DONE Downloading</string>
    <string name="progress">Progress: </string>

    <string name="all">All</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="loading">LoadingActivity</string>
    <string name="surreyTitle">Surrey Restaurant Inspections</string>
    <string name="noNetwork">No Network Connection, loading from local directory</string>
    <string name="newUpdate">A NEW UPDATE FOUND</string>
    <string name="downloadUpdate">Download Update?</string>
    <string name="load">Load</string>
    <string name="startMapActivity">startMapActivity</string>
    <string name="Inspection_Details">Inspection Details</string>

<string name="Plans">Plans not in regulation.</string>
    <string name="Unapproved">Unapproved food premises.</string>
    <string name="Invalid_permit">Invalid permits.</string>
    <string name="Unsafe_foods">Unsafe foods.</string>
    <string name="Equipment_not_clean">Equipment is not clean.</string>
    <string name="Unsafe_equipment">Unsafe equipment.</string>
    <string name="Premises">Premises not maintain well.</string>
    <string name="Pets">Pests control failed.</string>
    <string name="Employee_safety">Employee safety failed.</string>
    <string name="type">type</string>
    <string name="address">Address:</string>
    <string name="most_recent_inspection_level">Most Recent Inspection Level:</string>
    <string name="Unable_location">Unable to get current location</string>

    <string name="launches_search_criterea">launches search criterea</string>
    <string name="searchHint">eg) Pizza or 7-11</string>
    <string name="hazard_level_options_text">Hazard Level:</string>
    <string name="low_button_text">LOW</string>
    <string name="medium_btn_text">MEDIUM</string>
    <string name="high_btn_text">HIGH</string>
    <string name="minimum_critical_inspections">Minimum Critical Inspections :</string>
    <string name="numInspectionsHint">eg) 5</string>
    <string name="maximum_critical_issues">Maximum Critical Issues</string>
    <string name="favourites_switch_text">Favourites</string>
    <string name="min_crit_issues_hint">Enter Minimum Critical Issues</string>
    <string name="max_crit_issues_hint">Enter Maximum Critical Issues</string>
    <string name="favourite">favourite</string>
    <string name="opens_search_window_on_click">opens search window on click</string>
    <string name="reset">Reset</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="none">none</string>
</resources>