<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/hazardicon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/hazardicon"
        android:maxWidth="80dp"
        android:maxHeight="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/low_hazard" />

    <TextView
        android:id="@+id/numCritIssues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/numCritIssuesText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/hazardicon"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numCritIssuesValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/numCritIssueVal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/numCritIssues"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numNonCritText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:text="@string/numNonCritText"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/hazardicon"
        app:layout_constraintTop_toBottomOf="@+id/numCritIssues" />

    <TextView
        android:id="@+id/numNonCritVal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/numNonCritVal"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/numNonCritText"
        app:layout_constraintTop_toBottomOf="@id/numCritIssuesValue" />
</androidx.constraintlayout.widget.ConstraintLayout>