<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Inspection_Details">

    <TextView
        android:id="@+id/res_num_noncriticial"
        android:layout_width="136dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="num non-crit"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toEndOf="@+id/num_noncrit"
        app:layout_constraintTop_toBottomOf="@+id/res_num_critical" />

    <TextView
        android:id="@+id/res_num_critical"
        android:layout_width="136dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="numcrit"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toEndOf="@+id/numcrit"
        app:layout_constraintTop_toBottomOf="@+id/res_inspect_type" />

    <TextView
        android:id="@+id/res_inspect_type"
        android:layout_width="136dp"
        android:layout_height="33dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="50dp"
        android:text="type"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.918"
        app:layout_constraintStart_toEndOf="@+id/type_txt"
        app:layout_constraintTop_toBottomOf="@+id/res_inspect_date" />

    <TextView
        android:id="@+id/res_inspect_date"
        android:layout_width="141dp"
        android:layout_height="29dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:text="date"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/inspect_txt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/type_txt"
        android:layout_width="130dp"
        android:layout_height="30dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/inspection_type"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inspect_txt" />

    <TextView
        android:id="@+id/numcrit"
        android:layout_width="131dp"
        android:layout_height="35dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/critical_issues"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type_txt" />

    <TextView
        android:id="@+id/num_noncrit"
        android:layout_width="151dp"
        android:layout_height="31dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/non_critical_issues"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numcrit" />

    <TextView
        android:id="@+id/hazard"
        android:layout_width="131dp"
        android:layout_height="33dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/hazard_rating"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_noncrit" />

    <TextView
        android:id="@+id/inspect_txt"
        android:layout_width="128dp"
        android:layout_height="31dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:text="@string/inspection_date"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/res_hazard_rating"
        android:layout_width="70dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:text="rating"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/hazard_icon"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/hazard"
        app:layout_constraintTop_toBottomOf="@+id/res_num_noncriticial" />

    <ImageView
        android:id="@+id/hazard_icon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/res_num_noncriticial"
        app:srcCompat="@drawable/hazardlow" />

    <ListView
        android:id="@+id/ViolationsList"
        android:layout_width="431dp"
        android:layout_height="351dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="142dp"
        android:layout_height="28dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="Violations:"
        android:textAlignment="center"
        android:textColor="#201919"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hazard" />
</androidx.constraintlayout.widget.ConstraintLayout>